# openmat

./: CMakeLists.txt  LICENSE.txt  README.txt
Cmake/tests/: qt_compile_test.cpp
LpSensor/: BleApitypes.h  BleCmdDef.c  BleCmdDef.h  BleCommands.c  BleEngine.cpp  BleEngine.h  BleUart.c  BleUart.h  CMakeLists.txt  CalcMisalignment.h  CalcMisalignmentOS.c  CalibrationData.cpp  CalibrationData.h  CanEngine.cpp  CanEngine.h  CanEngineLinux.cpp  DeviceListItem.h  EmgData.cpp  EmgData.h  GaitTracking.h  GaitTrackingOS.cpp  ImuData.h  LpFilterCVersion.h  LpFilterCVersionOS.c  LpIoBase.cpp  LpIoBase.h  LpMagnetometerCalibration.h  LpMagnetometerCalibrationOS.c  LpMagnetometerMAlignment.h  LpMagnetometerMAlignmentOS.c  LpMatrix.c  LpMatrix.h  LpSensorBaseI.h  LpemgBluetooth.cpp  LpemgBluetooth.h  LpemgIoInterface.cpp  LpemgIoInterface.h  LpemgSensor.cpp  LpemgSensor.h  LpemgSensorI.h  (+45 more)
LpSensorCWrapper/: CMakeLists.txt  LpSensorCWrapper.cpp
LpSensorForAndroid/: LpmsB2.java
LpSensorForIOS/: AppDelegate.h  AppDelegate.m  DataLogger.h  DataLogger.m  Info.plist  LpmsB2.h  LpmsB2.m  LpmsBData.h  LpmsBData.m  SecondViewController.h  SecondViewController.m  View.h  View.m  ViewController.h  ViewController.m  main.m
LpSensorForIOS/Base.lproj/: Main.storyboard
LpSensorForIOS/LpmsB2IosExample.xcodeproj/: project.pbxproj
LpSensorForIOS/LpmsB2IosExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LpSensorForIOS/LpmsB2IosExample.xcodeproj/project.xcworkspace/xcuserdata/Tony.xcuserdatad/: UserInterfaceState.xcuserstate
LpSensorForIOS/LpmsB2IosExample.xcodeproj/project.xcworkspace/xcuserdata/klaus.xcuserdatad/: UserInterfaceState.xcuserstate
LpSensorForIOS/LpmsB2IosExample.xcodeproj/xcuserdata/Tony.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
LpSensorForIOS/LpmsB2IosExample.xcodeproj/xcuserdata/Tony.xcuserdatad/xcschemes/: Bluetooth.xcscheme  xcschememanagement.plist
LpSensorForIOS/LpmsB2IosExample.xcodeproj/xcuserdata/klaus.xcuserdatad/xcschemes/: xcschememanagement.plist
LpemgControl/: CMakeLists.txt  DiscoveryItem.cpp  DiscoveryItem.h  DiscoveryTree.cpp  DiscoveryTree.h  GraphWindow.cpp  GraphWindow.h  MainWindow.cpp  MainWindow.h  PlayControl.cpp  PlayControl.h  Plot.cpp  Plot.h  RescanDialog.cpp  RescanDialog.h  SensorGuiContainer.cpp  SensorGuiContainer.h  StdRedirector.cpp  VerticalBarGraph.h  main.cpp  version.rc
LpmsControl/: CMakeLists.txt  CubeWindowContainer.h  DiscoveryItem.cpp  DiscoveryItem.h  DiscoveryTree.cpp  DiscoveryTree.h  FieldMapContainer.cpp  FieldMapContainer.h  FieldMapDisplay.cpp  FieldMapDisplay.h  FieldModuleIndicator.cpp  FieldModuleIndicator.h  GaitTrackingWindow.cpp  GaitTrackingWindow.h  GraphWindow.cpp  GraphWindow.h  LpmsControlPreferredDevices.txt  MainWindow.cpp  MainWindow.h  MotionBuilderCommunication.cpp  MotionBuilderCommunication.h  ObjFileParser.cpp  ObjFileParser.h  PlayControl.h  Plot.cpp  Plot.h  RescanDialog.cpp  RescanDialog.h  SensorGuiContainer.cpp  SensorGuiContainer.h  StdRedirector.h  ThreeDWindow.cpp  ThreeDWindow.h  main.cpp
Qwt-6.1.3/: CMakeLists.txt
